// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complexModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::complexModule>>
 * BESPOKE<<fn1, TEST1, test2, 3tESt3>>
 * SIGNED<<UpI5L3VhpdDlA9utT1u7GP3lJxBvfuPbGa6ciBevBH1ZJ8DL+92f2K9yOqrQxIt1R8CT0pT2dwRT9u3y5dlpjw==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";

interface If1 {
}

export async function function2(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn1>> */
  /* BESPOKE END <<fn1>> */
}

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

let mutableVariable: number | null | undefined = 1;

export interface If2 {
  item: string;
}

type Ty1 = number;

export type Ty2 = string | null;

export type Ty3 = Ty2 | Ty1;

export async function function2(
): Promise<string> {
}

export const exportedVariable: string;

/* BESPOKE START <<3tESt3>> */
/* BESPOKE END <<3tESt3>> */

const immutableVariable: string | undefined = \\"TEST\\";

export interface If3 {
  test: null | string;
  test2: If2;
}

function function1(
): void {
}
"
`;

exports[`contentModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::contentModule>>
 * BESPOKE<<TEST1, test2, fn1>>
 * SIGNED<<jMcjUKe3TFsI61W8gVPGds/crklku3hF/TbsV6X1O1zhMsEo9I2Z8jBfYGIABe7FTyCxLhBYpLJKQZYRTKmvCw==>>
 */

type Ty1 = number;

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

interface If1 {
}

function function1(
): void {
}

export const exportedVariable: string;

export type Ty2 = string | null;

export async function function2(
): Promise<string> {
}

export interface If3 {
  test: null | string;
  test2: If2;
}

const immutableVariable: string | undefined = \\"TEST\\";

let mutableVariable: number | null | undefined = 1;

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

export async function function2(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn1>> */
  /* BESPOKE END <<fn1>> */
}

export interface If2 {
  item: string;
}

export type Ty3 = Ty2 | Ty1;
"
`;

exports[`emptyModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::emptyModule>>
 * SIGNED<<vmiIOMqGhuXJBom/KrWFzvETfJmbSMcLkvZ6XDTcFWl7XRHJgu1tcb4eHn97TgcziEqpfD96M5qO0DV3z3S+CQ==>>
 */
"
`;

exports[`importModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::importModule>>
 * SIGNED<<EJWOrRMLAeusKmK7X5+JjyKfAKF8ryn6DAAEwIiaXsQogb/SSONlan944YLt/m93dE2HDU38Me1lqSA0C05OZQ==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";
"
`;
